@@ -116,6 +116,14 @@ class bitarray:
     def __ilshift__(self, n: int) -> bitarray: ...
     def __irshift__(self, n: int) -> bitarray: ...
 
+    # data descriptors
+    @property
+    def nbytes(self) -> int: ...
+    @property
+    def padbits(self) -> int: ...
+    @property
+    def readonly(self) -> bool: ...
+
 
 class frozenbitarray(bitarray):
     def __hash__(self) -> int: ...
