@@ -1,3 +1,8 @@
+2022-XX-XX   2.6.0:
+-------------------
+  * add data descriptions: `.nbytes`, `.padbits`, `.readonly`
+
+
 2022-05-10   2.5.1:
 -------------------
   * optimize `.reverse()`, see #177
